--- a/src/main/resources/templates/h5/mobile/listVip.html
+++ b/src/main/resources/templates/h5/mobile/listVip.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>VIP管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="stylesheet" href="../assets/css/common.css"/>
+    <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <h5>VIP MANAGEMENT</h5>
         </div>
         <ul class="mui-table-view longlist" id="longList"></ul>
-        <a href="addVip.html" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
+        <a href="/mobile/car/vip/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
     </div>
 
      <!-- 自开发弹出层：选择内容过多，需要滚动 -->
@@ -37,27 +37,32 @@
         </div>
     </div> 
 </body>
-<script src="../assets/js/common.js"></script>
+<script src="/js/h5/mobile/common.js"></script>
 <script>
   
     $.ajax({
-        url: "http://list",
+        url: "/sys/car/vip/list",
         dataType: "json",
         async: false,
-        data: {},
+        data: {
+            limit: 10,
+            offset: 0,
+            sort: 'update_time',
+            order: 'desc',
+        },
         type: "GET",
         success: function(data) {
             var json = "";
-            for (i in data.longList) {
+            for (i in data.rows) {
                 json += `
                     <li class="mui-table-view-cell">
-                        <a href="detailVip.html">
-                            <h3><span class="mui-ellipsis">车牌号：${data.longList[i].title}</span>
+                        <a href="/mobile/car/vip/detail/${data.rows[i].id}">
+                            <h3><span class="mui-ellipsis">车牌号：${data.rows[i].number}</span>
                 `
                 json +=`</h3>
-                            <p>停车场：${data.longList[i].t3}</p>
+                            <p><span>停车场：${data.rows[i].parkingName}</span><span>车主姓名：${data.rows[i].name}</span></p>
                         </a>
-                        <i class="iconfont icon-shanchu" id="delete"></i>
+                        <i class="iconfont icon-shanchu" id="delete" value=${data.rows[i].id}></i>
                     </li> 
                 `
             }
@@ -65,5 +70,14 @@
         },        
     });
     $("#delete").click(function () { $("#popup").fadeIn(); $("body").css("overflow", "hidden"); });
+    $("#yes").click(function () {
+        $.post("/sys/car/vip/remove",{id:$("#delete").attr("value")},function (data) {
+            if(data.code == 0){
+                window.location.reload();
+            }else {
+                layer.msg(data.msg);
+            }
+        },"json");
+    });
 </script>
 </html>
