--- a/src/main/resources/templates/h5/mobile/listShanghu.html
+++ b/src/main/resources/templates/h5/mobile/listShanghu.html
@@ -63,16 +63,20 @@
                             <p><span>免费时长(分钟)：${data.rows[i].freeTime}分钟</span><span>费用：${data.rows[i].cost}</span></p>
                             <p>停车场：${data.rows[i].parkingName}</p>
                         </a>
-                        <i class="iconfont icon-shanchu" id="delete" value=${data.rows[i].id}></i>
+                        <i class="iconfont icon-shanchu delete" value=${data.rows[i].id}></i>
                     </li> 
                 `
             }
             $("#listShanghu").html(json);  
         },        
     });
-    $("#delete").click(function () { $("#popup").fadeIn(); $("body").css("overflow", "hidden"); });
+    $(".delete").click(function () {
+        $("#popup").fadeIn();
+        $("body").css("overflow", "hidden");
+        $("#yes").attr("value",$(this).attr("value")) ;
+    });
     $("#yes").click(function () {
-        $.post("/sys/car/business/remove",{id:$("#delete").attr("value")},function (data) {
+        $.post("/sys/car/business/remove",{id:$(this).attr("value")},function (data) {
             if(data.code == 0){
                 window.location.reload();
             }else {
