--- a/src/main/resources/templates/h5/mobile/detailVip.html
+++ b/src/main/resources/templates/h5/mobile/detailVip.html
@@ -6,42 +6,53 @@
     <title>商户车辆详情</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
+    <style type="text/css">
+        .bar{
+            background: #eee;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 .4rem;
+            height: 1.25rem;
+            line-height: 1.25rem;
+        }
+        .bar a{color: #333;}
+    </style>
 </head>
 
 <body>
-<header class="mui-bar mui-bar-nav">
-    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-    <h1 class="mui-title">VIP车辆详情</h1>
-</header>
-<div class="mui-content">
-    <div class="detail" id="detail"></div>
-    <img src="/img/h5/mobile/CCTowerLogo.png" class="bot-bg">
-</div>
-<span hidden id="id" th:text="${id}"></span>
-</body>
-<script src="/js/h5/mobile/common.js"></script>
-<script>
+    <div class="mui-content">
+        <header class="bar">
+            <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
+            <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
+        </header>
+        <div class="detail" id="detail"></div>
+        <img src="/img/h5/mobile/CCTowerLogo.png" class="bot-bg">
+    </div>
+    <span hidden id="id" th:text="${id}"></span>
+    </body>
+    <script src="/js/h5/mobile/common.js"></script>
+    <script>
 
-    $.ajax({
-        url: "/mobile/parking/" + $("#id").text(),
-        dataType: "json",
-        type: "GET",
-        success: function(data) {
-            var json = "";
-            json += `
-                <h3>${data.data.number}</h3>
-                <h5><span>${data.data.parkingName}</span></h5>
-                 <div class="cont">
-                    <p>车主姓名<span>${data.data.name}</span></p>
-                    <p>联系方式<span>${data.data.phone}</span></p>
-                    <p>公司名称<span>${data.data.corporateName}</span></p>
-                    <p>月租车分类<span>${data.data.classification}</span></p>
-                    <p>备注<span>${data.data.remarks}</span></p>
-                </div>
-            `
-            $("#detail").html(json);
-        },
-    });
+        $.ajax({
+            url: "/mobile/parking/" + $("#id").text(),
+            dataType: "json",
+            type: "GET",
+            success: function(data) {
+                var json = "";
+                json += `
+                    <h3>${data.data.number}</h3>
+                    <h5><span>${data.data.parkingName}</span></h5>
+                     <div class="cont">
+                        <p>车主姓名<span>${data.data.name}</span></p>
+                        <p>联系方式<span>${data.data.phone}</span></p>
+                        <p>公司名称<span>${data.data.corporateName}</span></p>
+                        <p>月租车分类<span>${data.data.classification}</span></p>
+                        <p>备注<span>${data.data.remarks}</span></p>
+                    </div>
+                `
+                $("#detail").html(json);
+            },
+        });
 
-</script>
+    </script>
 </html>
