--- a/src/main/resources/templates/h5/mobile/detailYuezu.html
+++ b/src/main/resources/templates/h5/mobile/detailYuezu.html
@@ -6,14 +6,25 @@
     <title>月租管理详情</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
+    <style type="text/css">
+        .bar{
+            background: #eee;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 .4rem;
+            height: 1.25rem;
+            line-height: 1.25rem;
+        }
+        .bar a{color: #333;}
+    </style>
 </head>
 
 <body>
-    <header class="mui-bar mui-bar-nav">
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-        <h1 class="mui-title">月租管理详情</h1>
-    </header>
     <div class="mui-content">
+        <header class="bar">
+            <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
+            <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
+        </header>
         <div class="detail" id="detail"></div>
         <img src="/img/h5/mobile/CCTowerLogo.png" class="bot-bg">
     </div>
@@ -42,8 +53,6 @@
                 </div>
             `
             $("#detail").html(json);
-
-
         },
 });
 
