--- a/src/main/resources/templates/h5/mobile/home.html
+++ b/src/main/resources/templates/h5/mobile/home.html
@@ -6,14 +6,25 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css" />
+    <style type="text/css">
+        .bar{
+            background: #eee;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 .4rem;
+            height: 1.25rem;
+            line-height: 1.25rem;
+        }
+        .bar a{color: #333;}
+    </style>
 </head>
 
 <body>
-    <header class="mui-bar mui-bar-nav">
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-        <h1 class="mui-title">首页</h1>
-    </header>
     <div class="mui-content">
+        <header class="bar">
+            <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
+            <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
+        </header>
         <div class="mui-slider" style="margin: 4%; width: 92%; border-radius: 16px;">
             <div class="mui-slider-group mui-slider-loop">
                 <!--支持循环，需要重复图片节点-->
@@ -32,13 +43,9 @@
         <div class="grid dribbble" >
             <a class="mui-col-xs-4" id="longCar" ><i class="iconfont icon-yuezu"></i>月租车辆</a>
             <a class="mui-col-xs-4" id="businessCar" ><i class="iconfont icon-Vip"></i>商户车辆</a>
-            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-shanghu"></i>VIP车辆<span class="badge">19</span></a>
+            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-shanghu"></i>VIP车辆</a>
         </div>
-        <h3 class="bigtit">月租管理</h3>
-        <ul class="mui-table-view longlist" id="longList"></ul>
         <p class="list-bot">没有更多内容啦</p>
-        <!-- <a class="afix small" id="consolt"><i class="iconfont icon-zixun1"></i><span>售后</span></a> -->
-        <!-- <img src="../assets/images/bg-wave.png" alt="" class="imgfix"> -->
     </div>
 
 </body>
@@ -70,37 +77,11 @@
         });
     }
 
-
   //首页轮播数据
     this.carousel = function () {
         var gallery = mui('.mui-slider');
         gallery.slider({interval:3000});
     }
-
-    $.ajax({
-        url: "http://list",
-        dataType: "json",
-        async: false,
-        data: {},
-        type: "GET",
-        success: function(data) {
-            var json = "";
-            for (i in data.longList) {
-                json += `
-                    <li class="mui-table-view-cell">
-                        <a href="detailYuezu.html">
-                            <h3><span class="mui-ellipsis">车牌号：${data.longList[i].title}</span>
-                `
-                json +=`</h3>
-                            <p><span>生效日期：${data.longList[i].t1}</span><span>失效日期：${data.longList[i].t2}</span></p>
-                            <p>停车场：${data.longList[i].t3}</p>
-                        </a>
-                    </li> 
-                `
-            }
-            $("#longList").html(json);  
-        },        
-    });
 
 </script>
 </html>
