--- a/src/main/resources/templates/system/tenantTopUp/edit.html
+++ b/src/main/resources/templates/system/tenantTopUp/edit.html
@@ -13,19 +13,25 @@
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">停车场名称：</label>
 								<div class="col-sm-8">
-									<input id="parkingName" name="parkingName" th:value="${tenantTopUp.parkingName}" class="form-control" type="text" readonly>
+									<label><input id="parkingName" name="parkingName" th:value="${tenantTopUp.parkingName}" class="form-control" type="text" readonly></label>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">商户名称：</label>
 								<div class="col-sm-8">
-									<input id="businessName" name="businessName" th:value="${tenantTopUp.businessName}" class="form-control" type="text" readonly>
+									<label><input id="businessName" name="businessName" th:value="${tenantTopUp.businessName}" class="form-control" type="text" readonly></label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">账户余额：</label>
+								<div class="col-sm-8">
+									<label><input th:value="${tenantTopUp.balance}" class="form-control" type="text" readonly></label>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">充值金额：</label>
 								<div class="col-sm-8">
-									<input id="balance" name="balance" th:value="${tenantTopUp.balance}" class="form-control" type="text">
+									<label><input id="balance" name="balance" class="form-control" type="text"></label>
 								</div>
 							</div>
 																					<div class="form-group">
