--- a/src/main/resources/templates/system/car/business/edit.html
+++ b/src/main/resources/templates/system/car/business/edit.html
@@ -30,7 +30,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">免费时长(分钟)：</label>
+                            <label class="col-sm-3 control-label">免费时长(小时)：</label>
                             <div class="col-sm-8">
                                 <label><input id="freeTime" name="freeTime" th:value="${car.freeTime}" class="form-control"
                                        type="text" readonly><label>
