--- a/src/main/resources/templates/system/car/special/edit.html
+++ b/src/main/resources/templates/system/car/special/edit.html
@@ -10,7 +10,7 @@
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
 						<input id="id" name="id" th:value="${car.id}"  type="hidden">
-							<input id="parkingType" name="parkingType" value="2" type="hidden">
+							<input id="parkingType" name="parkingType" value="4" type="hidden">
 							<input id="infieldPermission" name="infieldPermission" value="1" type="hidden">
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场</label>
@@ -25,6 +25,12 @@
 								<label class="col-sm-3 control-label">车牌号：</label>
 								<div class="col-sm-8">
 									<label><input id="number" name="number" th:value="${car.number}" class="form-control" type="text"></label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">停车费(元)：</label>
+								<div class="col-sm-8">
+									<label><input id="cost" name="cost" th:value="${car.cost}" class="form-control" type="text"></label>
 								</div>
 							</div>
 							<div class="form-group">
@@ -81,7 +87,7 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
-	<script type="text/javascript" src="/js/appjs/sys/car/vip/edit.js">
+	<script type="text/javascript" src="/js/appjs/sys/car/special/edit.js">
 	</script>
 	<script src="/js/appjs/common/laydate/laydate.js"></script>
 	<script>
