--- a/src/main/resources/templates/system/car/vip/add.html
+++ b/src/main/resources/templates/system/car/vip/add.html
@@ -51,7 +51,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">VIP分类：</label>
+								<label class="col-sm-3 control-label">月租车分类：</label>
 								<div class="col-sm-8">
 									<input id="classification" name="classification" class="form-control" type="text">
 								</div>
