--- a/src/main/resources/templates/system/billing/edit.html
+++ b/src/main/resources/templates/system/billing/edit.html
@@ -3,72 +3,89 @@
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
 <body class="gray-bg">
-	<div class="wrapper wrapper-content ">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="ibox float-e-margins">
-					<div class="ibox-content">
-						<form class="form-horizontal m-t" id="signupForm">
-						<input id="id" name="id" th:value="${billing.id}"  type="hidden">
+<div class="wrapper wrapper-content ">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                    <form class="form-horizontal m-t" id="signupForm">
+                        <input id="id" name="id" th:value="${billing.id}" type="hidden">
 
-							<div class="form-group">
-								<label class="col-sm-3 control-label">停车场</label>
-								<div class="col-sm-8">
-									<label th:each="parking:${parkingList}" class="radio-inline">
-										<input  name="parkingId" type="radio" th:value="${parking.id}"
-												th:text="${parking.name}" th:field="*{billing.parkingId}">
-									</label>
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">月租费用：</label>
-								<div class="col-sm-8">
-									<input id="monthlyPrice" name="monthlyPrice" th:value="${billing.monthlyPrice}" class="form-control" type="text">
-								</div>
-							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">免费停车时间(分钟)：</label>
-								<div class="col-sm-8">
-									<input id="freeTime" name="freeTime" th:value="${billing.freeTime}" class="form-control" type="text">
-								</div>
-							</div>
-														<div class="form-group">
-								<label class="col-sm-3 control-label">出场预留时间(分钟)：</label>
-								<div class="col-sm-8">
-									<input id="paidFreeTime" name="paidFreeTime" th:value="${billing.paidFreeTime}" class="form-control" type="text">
-								</div>
-							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">微信折扣百分比：</label>
-								<div class="col-sm-8">
-									<input id="wechatDiscount" name="wechatDiscount" th:value="${billing.wechatDiscount}" class="form-control" type="text">
-								</div>
-							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">支付宝折扣百分比：</label>
-								<div class="col-sm-8">
-									<input id="alipayDiscount" name="alipayDiscount" th:value="${billing.alipayDiscount}" class="form-control" type="text">
-								</div>
-							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">24小时最高收费：</label>
-								<div class="col-sm-8">
-									<input id="dayCost" name="dayCost" th:value="${billing.dayCost}" class="form-control" type="text">
-								</div>
-							</div>
-																					<div class="form-group">
-								<div class="col-sm-8 col-sm-offset-3">
-									<button type="submit" class="btn btn-primary">提交</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-	</div>
-	</div>
-	<div th:include="include::footer"></div>
-	<script type="text/javascript" src="/js/appjs/sys/billing/edit.js">
-	</script>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">停车场</label>
+                            <div class="col-sm-8">
+                                <label th:each="parking:${parkingList}" class="radio-inline">
+                                    <input name="parkingId" type="radio" th:value="${parking.id}"
+                                           th:text="${parking.name}" th:field="*{billing.parkingId}">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">月租费用：</label>
+                            <div class="col-sm-8">
+                                <label><input id="monthlyPrice" name="monthlyPrice" th:value="${billing.monthlyPrice}"
+                                              class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">免费停车时间(分钟)：</label>
+                            <div class="col-sm-8">
+                                <label><input id="freeTime" name="freeTime" th:value="${billing.freeTime}"
+                                              class="form-control"
+                                              type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">出场预留时间(分钟)：</label>
+                            <div class="col-sm-8">
+                                <label><input id="paidFreeTime" name="paidFreeTime" th:value="${billing.paidFreeTime}"
+                                              class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">微信折扣百分比：</label>
+                            <div class="col-sm-8">
+                                <label><input id="wechatDiscount" name="wechatDiscount"
+                                              th:value="${billing.wechatDiscount}"
+                                              class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">支付宝折扣百分比：</label>
+                            <div class="col-sm-8">
+                                <label><input id="alipayDiscount" name="alipayDiscount"
+                                              th:value="${billing.alipayDiscount}"
+                                              class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">24小时最高收费：</label>
+                            <div class="col-sm-8">
+                                <label><input id="dayCost" name="dayCost" th:value="${billing.dayCost}"
+                                              class="form-control"
+                                              type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">时长劵时间(分钟)：</label>
+                            <div class="col-sm-8">
+                                <label><input id="couponTime" name="couponTime" th:value="${billing.couponTime}"
+                                              class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-8 col-sm-offset-3">
+                                <button type="submit" class="btn btn-primary">提交</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:include="include::footer"></div>
+<script type="text/javascript" src="/js/appjs/sys/billing/edit.js">
+</script>
 </body>
 </html>
