--- a/src/main/resources/templates/system/billingTypeA/add.html
+++ b/src/main/resources/templates/system/billingTypeA/add.html
@@ -26,7 +26,7 @@
 									<label class="radio-inline"> <input type="radio"
 																		name="unitType" value="1" /> 小时
 									</label> <label class="radio-inline"> <input type="radio"
-																				 name="unitType" value="0" /> 分钟
+																				 name="unitType" value="0" checked/> 分钟
 								</label>
 								</div>
 							</div>
