--- a/src/main/resources/templates/system/billingTypeC/add.html
+++ b/src/main/resources/templates/system/billingTypeC/add.html
@@ -9,14 +9,13 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-content">
                     <form class="form-horizontal m-t" id="signupForm">
-                        <input id="id" name="id" th:value="${detail.id}" type="hidden">
 
                         <div class="form-group">
                             <label class="col-sm-3 control-label">停车场:</label>
                             <div class="col-sm-8">
                                 <label th:each="parking:${parkingList}" class="radio-inline">
                                     <input name="parkingId" type="radio" th:value="${parking.id}"
-                                           th:text="${parking.name}" th:field="*{detail.parkingId}">
+                                           th:text="${parking.name}" checked>
                                 </label>
                             </div>
                         </div>
@@ -24,22 +23,31 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">计费标准:</label>
                             <div class="col-sm-8">
-                                <label class="radio-inline"> <input
-                                        th:field="*{detail.unitType}" type="radio" name="unitType" value="1"/>
-                                    小时
-                                </label> <label class="radio-inline"> <input
-                                    th:field="*{detail.unitType}" type="radio" name="unitType" value="0" checked/>
-                                分钟
+                                <!--									<label class="radio-inline"> <input type="radio"
+                                                                                                        name="unitType" value="1" /> 小时-->
+                                </label> <label class="radio-inline"> <input type="radio"
+                                                                             name="unitType" value="0" checked/> 分钟
                             </label>
                             </div>
                         </div>
 
 
+                        <!--<div class="form-group">	-->
+                        <!--<label class="col-sm-3 control-label">0：分钟 1：小时：</label>-->
+                        <!--<div class="col-sm-8">-->
+                        <!--<input id="unitType" name="unitType" class="form-control" type="text">-->
+                        <!--</div>-->
+                        <!--</div>-->
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">时段:</label>
+                            <div class="col-sm-8">
+                                <label><input id="timeInterval" name="timeInterval" class="form-control" type="text"></label>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">单价(元):</label>
                             <div class="col-sm-8">
-                                <input id="unitPrice" name="unitPrice" th:value="${detail.unitPrice}"
-                                       class="form-control" type="text">
+                                <label><input id="unitPrice" name="unitPrice" class="form-control" type="text"></label>
                             </div>
                         </div>
                         <div class="form-group">
@@ -54,7 +62,7 @@
     </div>
 </div>
 <div th:include="include::footer"></div>
-<script type="text/javascript" src="/js/appjs/sys/billingTypeA/edit.js">
+<script type="text/javascript" src="/js/appjs/sys/billingTypeC/add.js">
 </script>
 </body>
 </html>
